--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <receiver
             android:name="com.lcs.greenranger.widget.DaggerWidgetProvider">
             <intent-filter>
@@ -30,6 +31,8 @@
             <meta-data android:name="android.appwidget.provider"
                 		android:resource="@xml/dagger_info"/>
         </receiver>
+        
+        <service android:name="com.lcs.greenranger.service.MediaService"></service>
     </application>
 
 </manifest>
