--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lcs.greenranger"
-    android:versionCode="4"
-    android:versionName="1.3" >
+
+    android:versionCode="6"
+    android:versionName="2.0" 
+    android:installLocation="preferExternal"
+   	>
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -16,7 +19,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" 
+        android:theme="@style/Theme.Sherlock"
         android:screenOrientation="portrait" >
         <activity
             android:name=".MainActivity"
